# raytracing

./: Cargo.toml  wip.vim
src/: camera.rs  main.rs  material.rs  ray.rs  scene.rs  vec3.rs
