[package]
name = "raytracing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auto_ops = "0.3.0"
eframe = "0.21.3"
egui_extras = { version = "0.21.0", features = ["image"] }
image = { version = "0.24.4", default-features = false, features = ["jpeg"] }
rand = "0.8.5"
rayon = "1.5.3"
time = "0.3.20"


[profile.release]
debug = true
